--- a/index.html
+++ b/index.html
@@ -9,22 +9,26 @@
 </head>
 <body>
   <div class="container">
-    <div class="card card-colour text-center">
-      <img src="https://picsum.photos/300/300?image=593" class="img-circle">
-      <h1>Dan Vernon</h1>
-      <h2>I feel like shit but look great</h2>
+    <div class="card slidein card-colour text-center">
+      <div class="flex-container">
+        <img src="https://picsum.photos/300/300?image=593" class="tiger img-circle">
+        <span class="round-box"><h1 class="animation">Dan Vernon</h1><p>
+        <h2>makes the internet great again</h2>
+        </span>
+      </div>
     </div>
 
-    <div class="card card-colour text-center">
+    <div class="card slidein card-colour text-center">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum optio omnis placeat iste cupiditate. Doloremque, tempora voluptatem, iusto nemo aliquam mollitia est soluta incidunt maxime fugit esse debitis laborum eos.
     </div>
 
 
-    <div class="card card-colour text-center social-icons">
+    <div class="card slidein card-colour text-center social-icons">
       <ul class="list-inline">
-        <li><i class="fab fa-github"></i></li>
-        <li><i class="fab fa-linkedin"></i></li>
-        <li><i class="fab fa-instagram"></i></li>
+        <li>
+          <a href="www.reddit.com"><i class="fab fa-github"></a></i></li>
+        <li><a href="www.reddit.com"><i class="fab fa-linkedin"></a></i></li>
+        <li><a href="www.reddit.com"><i class="fab fa-instagram"></a></i></li>
       </ul>
     </div>
   </div>
